--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,34 +1,50 @@
+* {
+	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+}
+
 .countingMain {
 	width: 500px;
-	/* background-color: green; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	border: 2px solid #111;
+	padding: 1em;
+	text-align: center;
+}
+
+.countDisplay {
+	font-size: 100px;
+	padding: 1em;
+	margin: 0;
+}
+
+.countingButton {
+	height: 28px;
+	margin-inline: 0.5em;
+	padding: 3px 7px;
+	color: #111;
+	border: 1px solid #111;
+	border-radius: 10px;
 }
 
 .increment {
-	height: 28px;
-	margin: 0 7px;
 	background-color: #3aa91b;
-	color: #111;
-	border: 1px solid #111;
-	border-radius: 10px;
 }
 
 .decrement {
-	height: 28px;
-	margin: 0 7px;
 	background-color: #e11313;
-	color: #111;
-	border: 1px solid #111;
-	border-radius: 10px;
 }
 
-button:hover {
+.countingButton:hover {
 	border: 1px solid #ddd;
 	color: #ddd;
-	/* box-shadow: 2px 2px 3px #111; */
-	/* padding: 5px 3px; */
-}
-
-.textInput {
-	margin-top: 10px;
 }
